fix: statistics wrap

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -29,6 +29,9 @@
     justify-content: space-around;
     padding: 3rem;
     background-color: var(--green);
+    flex-wrap: wrap;
+    gap: 2rem;
+
 }
 
 .iconData{
